# cmake-cookbook

./: README.md
recipe-01/: CMakeLists.txt  main.cpp
recipe-02/: CMakeLists.txt
recipe-02/src/: main.cpp  message.cpp
recipe-03/: CMakeLists.txt
recipe-03/include/: message.hpp
recipe-03/src/: main.cpp  message.cpp
recipe-04/: CMakeLists.txt
